# resume-engine

./: .gitignore  LICENSE  Modelfile  README.md  app.py  main.py  pyproject.toml
engine/: config.py  knowledge_loader.py  models.py  output_writer.py
engine/agents/: ats_review_agent.py  base_agent.py  learning_agent.py  recruiter_review_agent.py  resume_writer_agent.py  self_critique_agent.py
engine/pipelines/: optimize_pipeline.py
engine/prompts/: ats_review.txt  learning.txt  recruiter_review.txt  resume_writer.txt  self_critique.txt
knowledge/: action_verbs.md  profile_template.md
knowledge/frameworks/: ats_compliance.md  evidence_classification.md  fluff_blacklist.md  prohibited_items.md  resume_structure.md  vocabulary_bridges.md
knowledge/metrics/: metrics.md
knowledge/projects/: AI_Fitness_Rep_Counter.md  ac_anomaly_detector.md  arc_ai.md  arc_financial_distress_analyzer.md  auto_damage_estimator.md  data_science_projects.md  diabetic_foot_ulcer_detection.md  netscan_insight.md  social_distancing_detector.md
